# myRegularCode

./: CMakeLists.txt  README.md
CMake/不同目录下/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mian.c
CMake/同一目录下/: CMakeLists.txt  Stack.c  Stack.h  main.c
FileTxt/: CMakeCache.txt  Makefile  cmake_install.cmake
FileTxt/指令/: CMakeLists.txt 配置手册.md
mycode/: zhuo.c
mycode/Hanoi/: main.c
mycode/SomeExample/file/: fscanfANDfprintf.c
mycode/computer/: MycomputerShow.c  MycomputerTest.c
mycode/file/: doublefile.c  fgetcANDfputc.c  fgetsANDfputs.c  open.c
mycode/filemake/: LinkedList.c  LinkedList.h  LinkedStack.c  LinkedStack.h
mycode/icoding_test/: 2020_1.c  2020_2.c  2020_3.c  2020_4.c  2020_7.c  2021_1.c  2021_2.c  2023_3.c  calendar.c  random&two-dimension.c  test.c
mycode/link list/: link_list.c
mycode/malloc/: malloc.c  malloc_example.c
mycode/pblf-computer/computer-multi-file/: LinkedList.h  common.h
mycode/pblf-computer/computer-single file/: MycomputerShow.c
mycode/sort/: bubble sort.c  select sort.c
mycode/stack/: arr_stack.c  pointstack.c
mycode/test/: CMakeLists.txt  calendar.c  test.c
mycode/zhuo/: 1.c  myFirst.c
mycode/多文件编程/不同目录下/: CMakeLists.txt
mycode/多文件编程/不同目录下/include/: LinkList.h  common.h
mycode/多文件编程/不同目录下/mainCode/: main.c
mycode/多文件编程/同一目录下/: CMakeLists.txt  LinkList.c  main.c
